influxdb3-plugin-cli/tests/snapshots/yank_smoke__yank_already_in_desired_state_json.snap
---
source: influxdb3-plugin-cli/tests/yank_smoke.rs
expression: payload
---
{
  "index_path": "<TMPDIR>/build/index.json",
  "name": "downsampler",
  "outcome": "already_in_desired_state",
  "target_state": true,
  "version": "1.2.0"
}
