influxdb3-plugin-cli/tests/snapshots/yank_smoke__yank_already_yanked_json.snap
---
source: influxdb3-plugin-cli/tests/yank_smoke.rs
expression: envelope
---
{
  "result": {
    "index_path": "<TMPDIR>/build/index.json",
    "name": "downsampler",
    "outcome": "already_yanked",
    "version": "1.2.0"
  },
  "status": "ok"
}
