influxdb3-plugin-cli/tests/snapshots/yank_smoke__yank_undo_transitioned_json.snap
---
source: influxdb3-plugin-cli/tests/yank_smoke.rs
assertion_line: 145
expression: envelope
---
{
  "result": {
    "index_path": "<TMPDIR>/build/index.json",
    "name": "downsampler",
    "outcome": "unyanked",
    "published_at": "2026-04-29T18:45:12Z",
    "version": "1.2.0"
  },
  "status": "ok"
}
